package com.company._240304_BatalladelFuturo;

public interface Atacante {
    public void atacar();
}
