package com.company._240304_BatalladelFuturo;

public interface Defensor {
    public void defender();
}
