package com.company._240304_BatalladelFuturo;

public class Senuelo extends SistemaArmas {
    public Senuelo(Integer energia) {
        super(energia);
    }
    @Override
    public void mostrar() {
        System.out.println("Mostrando un señuelo");
    }
}