package com.company._240304_BatalladelFuturo;

public interface Volador {
    public void volar();
}
